# SixthModule

./: BotBoss.cpp  BotBoss1.cpp  BuyAnElefant.cpp  CMakeLists.txt  CadastralProblems.cpp  CashMachine3.cpp  CashMachine4.cpp  Collector.cpp  CollectorPro.cpp  Cuckoo.cpp  Deposits.cpp  FiboNumbers.cpp  FirstDegree.cpp  FractionReduction.cpp  GuesTheNumber.cpp  HappyTicket.cpp  HowNumbers.cpp  LeatherBag.cpp  README.md  Reminder.cpp  SecondDegree.cpp  WarTime.cpp
