cmake_minimum_required(VERSION 3.20)
project(SixthModule)

set(CMAKE_CXX_STANDARD 14)

add_executable(BotBoss BotBoss1.cpp)
add_executable(BuyAnElefant BuyAnElefant.cpp)
add_executable(FirstDegree FirstDegree.cpp)
add_executable(Reminder Reminder.cpp Reminder.cpp)
add_executable(CashMachine3 CashMachine3.cpp)