cmake_minimum_required(VERSION 3.20)
project(SixthModule)

set(CMAKE_CXX_STANDARD 14)

add_executable(BotBoss BotBoss1.cpp)
add_executable(BuyAnElefant BuyAnElefant.cpp)
add_executable(FirstDegree FirstDegree.cpp)
add_executable(Reminder Reminder.cpp Reminder.cpp)
add_executable(CashMachine3 CashMachine3.cpp)
add_executable(CashMachine4 CashMachine4.cpp)
add_executable(CadastralProblems CadastralProblems.cpp)
add_executable(LeatherBag LeatherBag.cpp)
add_executable(WarTime WarTime.cpp)
add_executable(Cuckoo Cuckoo.cpp)
add_executable(Collector Collector.cpp)
add_executable(HowNumers HowNumbers.cpp)
add_executable(CollectorPro CollectorPro.cpp)
add_executable(HappyTicket HappyTicket.cpp)
add_executable(SecondDegree SecondDegree.cpp)
add_executable(FiboNumbers FiboNumbers.cpp)
add_executable(FractionReduction FractionReduction.cpp)
add_executable(Deposits Deposits.cpp)